export interface Point {
  time: number;
  x: number;
  y: number;
}
