export interface RegionType {
  id: number;
  name: string;
  hexargb: string; // without the #
}
