import {Point} from './point';

export interface Stroke {
  points: Point[];
}

