export interface BoundingBox {
  fromX: number;
  fromY: number;
  toX: number;
  toY: number;
}
